--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Opensource</button></div></div><div class="container filtr-projects"><div class=
 <span class="badge btn-info">javascript</span>
 <span class="badge btn-info">html</span>
 <span class="badge btn-info">opensource</span></div><div class=project-btn-holder><a class="github-button-inactive project-btn" href=https://github.com/hugo-toha/toha data-icon=octicon-standard data-show-count=true aria-label="Star toha">Star</a></div></div></div></div></div></div><div class="col-sm-12 col-md-6 col-lg-4 p-2 filtr-item" data-category="all, javascript,css,html,opensource,hobby"><div class="card mt-1"><div class=card><a class=card-header href=https://github.com/HenzelMoras/HenzelMoras.github.io target=_blank><div><div class=d-flex><h5 class="card-title mb-0">HenzelMoras.github.io</h5></div><div class=sub-title><span>owner</span>
-<span></span></div></div></a><div class="card-body text-justify pt-1 pb-1"><p>My Personal blog in which i write about system Administration, Web security and Programming in general</p><div class=project-card-footer><div class=project-tags-holder><span class="badge btn-info">javascript</span>
+<span></span></div></div></a><div class="card-body text-justify pt-1 pb-1"><p>blog in which i write about system Administration, Web security and Programming in general</p><div class=project-card-footer><div class=project-tags-holder><span class="badge btn-info">javascript</span>
 <span class="badge btn-info">css</span>
 <span class="badge btn-info">html</span>
 <span class="badge btn-info">opensource</span>
